pro5/parser.output
Grammar

    0 $accept: Start $end

    1 Start: Class

    2 Class: MNAME LEFTBRACE Members Methods RIGHTBRACE Class
    3      | MNAME COLON MNAME LEFTBRACE Members Methods RIGHTBRACE Class
    4      | /* empty */

    5 Members: Members Type MNAME
    6        | /* empty */

    7 Methods: MNAME LEFTPAREN Arguments RIGHTPAREN COLON Type LEFTBRACE Body RIGHTBRACE Methods
    8        | /* empty */

    9 Arguments: ArgumentsPrime
   10          | /* empty */

   11 ArgumentsPrime: ArgumentsPrime COMMA Type MNAME
   12               | Type MNAME

   13 Body: Declaration StatementPrime ReturnStatement

   14 ReturnStatement: RETURN Expression
   15                | /* empty */

   16 Declaration: Declaration Type MNAME Declarations
   17            | /* empty */

   18 Declarations: COMMA MNAME Declarations
   19             | /* empty */

   20 StatementPrime: Statement
   21               | /* empty */

   22 Statement: Statements Statement
   23          | Statements

   24 Statements: Assignment
   25           | MethodCall
   26           | ifElse
   27           | forLoop
   28           | Print

   29 Assignment: MNAME ASSIGNMENT Expression

   30 MethodCall: MNAME LEFTPAREN Parameters RIGHTPAREN
   31           | MNAME DOT MNAME LEFTPAREN Parameters RIGHTPAREN

   32 ifElse: IF Expression LEFTBRACE Statement RIGHTBRACE
   33       | IF Expression LEFTBRACE Statement RIGHTBRACE ELSE LEFTBRACE Statement RIGHTBRACE

   34 forLoop: FOR Assignment SEMICOLON Expression SEMICOLON Assignment LEFTBRACE Statement RIGHTBRACE

   35 Print: PRINT Expression

   36 Type: INT
   37     | BOOL
   38     | MNAME
   39     | NONE

   40 Expression: Expression PLUS Expression
   41           | Expression MINUS Expression
   42           | Expression TIMES Expression
   43           | Expression DIVIDE Expression
   44           | Expression LT Expression
   45           | Expression LTE Expression
   46           | Expression EQLTO Expression
   47           | Expression AND Expression
   48           | Expression OR Expression
   49           | NOT Expression
   50           | MINUS Expression
   51           | MNAME
   52           | MNAME DOT MNAME
   53           | MethodCall
   54           | LEFTPAREN Expression RIGHTPAREN
   55           | INT
   56           | TRUE
   57           | FALSE
   58           | NEW MNAME
   59           | NEW MNAME LEFTPAREN Parameters RIGHTPAREN

   60 Parameters: Parameters COMMA Expression
   61           | Expression
   62           | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
ELSE (258) 33
IF (259) 32 33
FOR (260) 34
NONE (261) 39
PRINT (262) 35
RETURN (263) 14
NEW (264) 58 59
BOOL (265) 37
INT (266) 36 55
TRUE (267) 56
FALSE (268) 57
MNAME (269) 2 3 5 7 11 12 16 18 29 30 31 38 51 52 58 59
OR (270) 48
AND (271) 47
LT (272) 44
LTE (273) 45
EQLTO (274) 46
PLUS (275) 40
MINUS (276) 41 50
TIMES (277) 42
DIVIDE (278) 43
NOT (279) 49
SEMICOLON (280) 34
COLON (281) 3 7
COMMA (282) 11 18 60
LEFTBRACE (283) 2 3 7 32 33 34
RIGHTBRACE (284) 2 3 7 32 33 34
LEFTPAREN (285) 7 30 31 54 59
RIGHTPAREN (286) 7 30 31 54 59
ASSIGNMENT (287) 29
DOT (288) 31 52


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Start (35)
    on left: 1, on right: 0
Class (36)
    on left: 2 3 4, on right: 1 2 3
Members (37)
    on left: 5 6, on right: 2 3 5
Methods (38)
    on left: 7 8, on right: 2 3 7
Arguments (39)
    on left: 9 10, on right: 7
ArgumentsPrime (40)
    on left: 11 12, on right: 9 11
Body (41)
    on left: 13, on right: 7
ReturnStatement (42)
    on left: 14 15, on right: 13
Declaration (43)
    on left: 16 17, on right: 13 16
Declarations (44)
    on left: 18 19, on right: 16 18
StatementPrime (45)
    on left: 20 21, on right: 13
Statement (46)
    on left: 22 23, on right: 20 22 32 33 34
Statements (47)
    on left: 24 25 26 27 28, on right: 22 23
Assignment (48)
    on left: 29, on right: 24 34
MethodCall (49)
    on left: 30 31, on right: 25 53
ifElse (50)
    on left: 32 33, on right: 26
forLoop (51)
    on left: 34, on right: 27
Print (52)
    on left: 35, on right: 28
Type (53)
    on left: 36 37 38 39, on right: 5 7 11 12 16
Expression (54)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59, on right: 14 29 32 33 34 35 40 41 42 43 44 45 46 47 48 49
    50 54 60 61
Parameters (55)
    on left: 60 61 62, on right: 30 31 59 60


state 0

    0 $accept: . Start $end

    MNAME  shift, and go to state 1

    $default  reduce using rule 4 (Class)

    Start  go to state 2
    Class  go to state 3


state 1

    2 Class: MNAME . LEFTBRACE Members Methods RIGHTBRACE Class
    3      | MNAME . COLON MNAME LEFTBRACE Members Methods RIGHTBRACE Class

    COLON      shift, and go to state 4
    LEFTBRACE  shift, and go to state 5


state 2

    0 $accept: Start . $end

    $end  shift, and go to state 6


state 3

    1 Start: Class .

    $default  reduce using rule 1 (Start)


state 4

    3 Class: MNAME COLON . MNAME LEFTBRACE Members Methods RIGHTBRACE Class

    MNAME  shift, and go to state 7


state 5

    2 Class: MNAME LEFTBRACE . Members Methods RIGHTBRACE Class

    $default  reduce using rule 6 (Members)

    Members  go to state 8


state 6

    0 $accept: Start $end .

    $default  accept


state 7

    3 Class: MNAME COLON MNAME . LEFTBRACE Members Methods RIGHTBRACE Class

    LEFTBRACE  shift, and go to state 9


state 8

    2 Class: MNAME LEFTBRACE Members . Methods RIGHTBRACE Class
    5 Members: Members . Type MNAME

    NONE   shift, and go to state 10
    BOOL   shift, and go to state 11
    INT    shift, and go to state 12
    MNAME  shift, and go to state 13

    $default  reduce using rule 8 (Methods)

    Methods  go to state 14
    Type     go to state 15


state 9

    3 Class: MNAME COLON MNAME LEFTBRACE . Members Methods RIGHTBRACE Class

    $default  reduce using rule 6 (Members)

    Members  go to state 16


state 10

   39 Type: NONE .

    $default  reduce using rule 39 (Type)


state 11

   37 Type: BOOL .

    $default  reduce using rule 37 (Type)


state 12

   36 Type: INT .

    $default  reduce using rule 36 (Type)


state 13

    7 Methods: MNAME . LEFTPAREN Arguments RIGHTPAREN COLON Type LEFTBRACE Body RIGHTBRACE Methods
   38 Type: MNAME .

    LEFTPAREN  shift, and go to state 17

    $default  reduce using rule 38 (Type)


state 14

    2 Class: MNAME LEFTBRACE Members Methods . RIGHTBRACE Class

    RIGHTBRACE  shift, and go to state 18


state 15

    5 Members: Members Type . MNAME

    MNAME  shift, and go to state 19


state 16

    3 Class: MNAME COLON MNAME LEFTBRACE Members . Methods RIGHTBRACE Class
    5 Members: Members . Type MNAME

    NONE   shift, and go to state 10
    BOOL   shift, and go to state 11
    INT    shift, and go to state 12
    MNAME  shift, and go to state 13

    $default  reduce using rule 8 (Methods)

    Methods  go to state 20
    Type     go to state 15


state 17

    7 Methods: MNAME LEFTPAREN . Arguments RIGHTPAREN COLON Type LEFTBRACE Body RIGHTBRACE Methods

    NONE   shift, and go to state 10
    BOOL   shift, and go to state 11
    INT    shift, and go to state 12
    MNAME  shift, and go to state 21

    $default  reduce using rule 10 (Arguments)

    Arguments       go to state 22
    ArgumentsPrime  go to state 23
    Type            go to state 24


state 18

    2 Class: MNAME LEFTBRACE Members Methods RIGHTBRACE . Class

    MNAME  shift, and go to state 1

    $default  reduce using rule 4 (Class)

    Class  go to state 25


state 19

    5 Members: Members Type MNAME .

    $default  reduce using rule 5 (Members)


state 20

    3 Class: MNAME COLON MNAME LEFTBRACE Members Methods . RIGHTBRACE Class

    RIGHTBRACE  shift, and go to state 26


state 21

   38 Type: MNAME .

    $default  reduce using rule 38 (Type)


state 22

    7 Methods: MNAME LEFTPAREN Arguments . RIGHTPAREN COLON Type LEFTBRACE Body RIGHTBRACE Methods

    RIGHTPAREN  shift, and go to state 27


state 23

    9 Arguments: ArgumentsPrime .
   11 ArgumentsPrime: ArgumentsPrime . COMMA Type MNAME

    COMMA  shift, and go to state 28

    $default  reduce using rule 9 (Arguments)


state 24

   12 ArgumentsPrime: Type . MNAME

    MNAME  shift, and go to state 29


state 25

    2 Class: MNAME LEFTBRACE Members Methods RIGHTBRACE Class .

    $default  reduce using rule 2 (Class)


state 26

    3 Class: MNAME COLON MNAME LEFTBRACE Members Methods RIGHTBRACE . Class

    MNAME  shift, and go to state 1

    $default  reduce using rule 4 (Class)

    Class  go to state 30


state 27

    7 Methods: MNAME LEFTPAREN Arguments RIGHTPAREN . COLON Type LEFTBRACE Body RIGHTBRACE Methods

    COLON  shift, and go to state 31


state 28

   11 ArgumentsPrime: ArgumentsPrime COMMA . Type MNAME

    NONE   shift, and go to state 10
    BOOL   shift, and go to state 11
    INT    shift, and go to state 12
    MNAME  shift, and go to state 21

    Type  go to state 32


state 29

   12 ArgumentsPrime: Type MNAME .

    $default  reduce using rule 12 (ArgumentsPrime)


state 30

    3 Class: MNAME COLON MNAME LEFTBRACE Members Methods RIGHTBRACE Class .

    $default  reduce using rule 3 (Class)


state 31

    7 Methods: MNAME LEFTPAREN Arguments RIGHTPAREN COLON . Type LEFTBRACE Body RIGHTBRACE Methods

    NONE   shift, and go to state 10
    BOOL   shift, and go to state 11
    INT    shift, and go to state 12
    MNAME  shift, and go to state 21

    Type  go to state 33


state 32

   11 ArgumentsPrime: ArgumentsPrime COMMA Type . MNAME

    MNAME  shift, and go to state 34


state 33

    7 Methods: MNAME LEFTPAREN Arguments RIGHTPAREN COLON Type . LEFTBRACE Body RIGHTBRACE Methods

    LEFTBRACE  shift, and go to state 35


state 34

   11 ArgumentsPrime: ArgumentsPrime COMMA Type MNAME .

    $default  reduce using rule 11 (ArgumentsPrime)


state 35

    7 Methods: MNAME LEFTPAREN Arguments RIGHTPAREN COLON Type LEFTBRACE . Body RIGHTBRACE Methods

    $default  reduce using rule 17 (Declaration)

    Body         go to state 36
    Declaration  go to state 37


state 36

    7 Methods: MNAME LEFTPAREN Arguments RIGHTPAREN COLON Type LEFTBRACE Body . RIGHTBRACE Methods

    RIGHTBRACE  shift, and go to state 38


state 37

   13 Body: Declaration . StatementPrime ReturnStatement
   16 Declaration: Declaration . Type MNAME Declarations

    IF     shift, and go to state 39
    FOR    shift, and go to state 40
    NONE   shift, and go to state 10
    PRINT  shift, and go to state 41
    BOOL   shift, and go to state 11
    INT    shift, and go to state 12
    MNAME  shift, and go to state 42

    $default  reduce using rule 21 (StatementPrime)

    StatementPrime  go to state 43
    Statement       go to state 44
    Statements      go to state 45
    Assignment      go to state 46
    MethodCall      go to state 47
    ifElse          go to state 48
    forLoop         go to state 49
    Print           go to state 50
    Type            go to state 51


state 38

    7 Methods: MNAME LEFTPAREN Arguments RIGHTPAREN COLON Type LEFTBRACE Body RIGHTBRACE . Methods

    MNAME  shift, and go to state 52

    $default  reduce using rule 8 (Methods)

    Methods  go to state 53


state 39

   32 ifElse: IF . Expression LEFTBRACE Statement RIGHTBRACE
   33       | IF . Expression LEFTBRACE Statement RIGHTBRACE ELSE LEFTBRACE Statement RIGHTBRACE

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 63


state 40

   34 forLoop: FOR . Assignment SEMICOLON Expression SEMICOLON Assignment LEFTBRACE Statement RIGHTBRACE

    MNAME  shift, and go to state 64

    Assignment  go to state 65


state 41

   35 Print: PRINT . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 66


state 42

   29 Assignment: MNAME . ASSIGNMENT Expression
   30 MethodCall: MNAME . LEFTPAREN Parameters RIGHTPAREN
   31           | MNAME . DOT MNAME LEFTPAREN Parameters RIGHTPAREN
   38 Type: MNAME .

    LEFTPAREN   shift, and go to state 67
    ASSIGNMENT  shift, and go to state 68
    DOT         shift, and go to state 69

    $default  reduce using rule 38 (Type)


state 43

   13 Body: Declaration StatementPrime . ReturnStatement

    RETURN  shift, and go to state 70

    $default  reduce using rule 15 (ReturnStatement)

    ReturnStatement  go to state 71


state 44

   20 StatementPrime: Statement .

    $default  reduce using rule 20 (StatementPrime)


state 45

   22 Statement: Statements . Statement
   23          | Statements .

    IF     shift, and go to state 39
    FOR    shift, and go to state 40
    PRINT  shift, and go to state 41
    MNAME  shift, and go to state 72

    $default  reduce using rule 23 (Statement)

    Statement   go to state 73
    Statements  go to state 45
    Assignment  go to state 46
    MethodCall  go to state 47
    ifElse      go to state 48
    forLoop     go to state 49
    Print       go to state 50


state 46

   24 Statements: Assignment .

    $default  reduce using rule 24 (Statements)


state 47

   25 Statements: MethodCall .

    $default  reduce using rule 25 (Statements)


state 48

   26 Statements: ifElse .

    $default  reduce using rule 26 (Statements)


state 49

   27 Statements: forLoop .

    $default  reduce using rule 27 (Statements)


state 50

   28 Statements: Print .

    $default  reduce using rule 28 (Statements)


state 51

   16 Declaration: Declaration Type . MNAME Declarations

    MNAME  shift, and go to state 74


state 52

    7 Methods: MNAME . LEFTPAREN Arguments RIGHTPAREN COLON Type LEFTBRACE Body RIGHTBRACE Methods

    LEFTPAREN  shift, and go to state 17


state 53

    7 Methods: MNAME LEFTPAREN Arguments RIGHTPAREN COLON Type LEFTBRACE Body RIGHTBRACE Methods .

    $default  reduce using rule 7 (Methods)


state 54

   58 Expression: NEW . MNAME
   59           | NEW . MNAME LEFTPAREN Parameters RIGHTPAREN

    MNAME  shift, and go to state 75


state 55

   55 Expression: INT .

    $default  reduce using rule 55 (Expression)


state 56

   56 Expression: TRUE .

    $default  reduce using rule 56 (Expression)


state 57

   57 Expression: FALSE .

    $default  reduce using rule 57 (Expression)


state 58

   30 MethodCall: MNAME . LEFTPAREN Parameters RIGHTPAREN
   31           | MNAME . DOT MNAME LEFTPAREN Parameters RIGHTPAREN
   51 Expression: MNAME .
   52           | MNAME . DOT MNAME

    LEFTPAREN  shift, and go to state 67
    DOT        shift, and go to state 76

    $default  reduce using rule 51 (Expression)


state 59

   50 Expression: MINUS . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 77


state 60

   49 Expression: NOT . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 78


state 61

   54 Expression: LEFTPAREN . Expression RIGHTPAREN

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 79


state 62

   53 Expression: MethodCall .

    $default  reduce using rule 53 (Expression)


state 63

   32 ifElse: IF Expression . LEFTBRACE Statement RIGHTBRACE
   33       | IF Expression . LEFTBRACE Statement RIGHTBRACE ELSE LEFTBRACE Statement RIGHTBRACE
   40 Expression: Expression . PLUS Expression
   41           | Expression . MINUS Expression
   42           | Expression . TIMES Expression
   43           | Expression . DIVIDE Expression
   44           | Expression . LT Expression
   45           | Expression . LTE Expression
   46           | Expression . EQLTO Expression
   47           | Expression . AND Expression
   48           | Expression . OR Expression

    OR         shift, and go to state 80
    AND        shift, and go to state 81
    LT         shift, and go to state 82
    LTE        shift, and go to state 83
    EQLTO      shift, and go to state 84
    PLUS       shift, and go to state 85
    MINUS      shift, and go to state 86
    TIMES      shift, and go to state 87
    DIVIDE     shift, and go to state 88
    LEFTBRACE  shift, and go to state 89


state 64

   29 Assignment: MNAME . ASSIGNMENT Expression

    ASSIGNMENT  shift, and go to state 68


state 65

   34 forLoop: FOR Assignment . SEMICOLON Expression SEMICOLON Assignment LEFTBRACE Statement RIGHTBRACE

    SEMICOLON  shift, and go to state 90


state 66

   35 Print: PRINT Expression .
   40 Expression: Expression . PLUS Expression
   41           | Expression . MINUS Expression
   42           | Expression . TIMES Expression
   43           | Expression . DIVIDE Expression
   44           | Expression . LT Expression
   45           | Expression . LTE Expression
   46           | Expression . EQLTO Expression
   47           | Expression . AND Expression
   48           | Expression . OR Expression

    OR      shift, and go to state 80
    AND     shift, and go to state 81
    LT      shift, and go to state 82
    LTE     shift, and go to state 83
    EQLTO   shift, and go to state 84
    PLUS    shift, and go to state 85
    MINUS   shift, and go to state 86
    TIMES   shift, and go to state 87
    DIVIDE  shift, and go to state 88

    $default  reduce using rule 35 (Print)


state 67

   30 MethodCall: MNAME LEFTPAREN . Parameters RIGHTPAREN

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    $default  reduce using rule 62 (Parameters)

    MethodCall  go to state 62
    Expression  go to state 91
    Parameters  go to state 92


state 68

   29 Assignment: MNAME ASSIGNMENT . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 93


state 69

   31 MethodCall: MNAME DOT . MNAME LEFTPAREN Parameters RIGHTPAREN

    MNAME  shift, and go to state 94


state 70

   14 ReturnStatement: RETURN . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 95


state 71

   13 Body: Declaration StatementPrime ReturnStatement .

    $default  reduce using rule 13 (Body)


state 72

   29 Assignment: MNAME . ASSIGNMENT Expression
   30 MethodCall: MNAME . LEFTPAREN Parameters RIGHTPAREN
   31           | MNAME . DOT MNAME LEFTPAREN Parameters RIGHTPAREN

    LEFTPAREN   shift, and go to state 67
    ASSIGNMENT  shift, and go to state 68
    DOT         shift, and go to state 69


state 73

   22 Statement: Statements Statement .

    $default  reduce using rule 22 (Statement)


state 74

   16 Declaration: Declaration Type MNAME . Declarations

    COMMA  shift, and go to state 96

    $default  reduce using rule 19 (Declarations)

    Declarations  go to state 97


state 75

   58 Expression: NEW MNAME .
   59           | NEW MNAME . LEFTPAREN Parameters RIGHTPAREN

    LEFTPAREN  shift, and go to state 98

    $default  reduce using rule 58 (Expression)


state 76

   31 MethodCall: MNAME DOT . MNAME LEFTPAREN Parameters RIGHTPAREN
   52 Expression: MNAME DOT . MNAME

    MNAME  shift, and go to state 99


state 77

   40 Expression: Expression . PLUS Expression
   41           | Expression . MINUS Expression
   42           | Expression . TIMES Expression
   43           | Expression . DIVIDE Expression
   44           | Expression . LT Expression
   45           | Expression . LTE Expression
   46           | Expression . EQLTO Expression
   47           | Expression . AND Expression
   48           | Expression . OR Expression
   50           | MINUS Expression .

    $default  reduce using rule 50 (Expression)


state 78

   40 Expression: Expression . PLUS Expression
   41           | Expression . MINUS Expression
   42           | Expression . TIMES Expression
   43           | Expression . DIVIDE Expression
   44           | Expression . LT Expression
   45           | Expression . LTE Expression
   46           | Expression . EQLTO Expression
   47           | Expression . AND Expression
   48           | Expression . OR Expression
   49           | NOT Expression .

    $default  reduce using rule 49 (Expression)


state 79

   40 Expression: Expression . PLUS Expression
   41           | Expression . MINUS Expression
   42           | Expression . TIMES Expression
   43           | Expression . DIVIDE Expression
   44           | Expression . LT Expression
   45           | Expression . LTE Expression
   46           | Expression . EQLTO Expression
   47           | Expression . AND Expression
   48           | Expression . OR Expression
   54           | LEFTPAREN Expression . RIGHTPAREN

    OR          shift, and go to state 80
    AND         shift, and go to state 81
    LT          shift, and go to state 82
    LTE         shift, and go to state 83
    EQLTO       shift, and go to state 84
    PLUS        shift, and go to state 85
    MINUS       shift, and go to state 86
    TIMES       shift, and go to state 87
    DIVIDE      shift, and go to state 88
    RIGHTPAREN  shift, and go to state 100


state 80

   48 Expression: Expression OR . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 101


state 81

   47 Expression: Expression AND . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 102


state 82

   44 Expression: Expression LT . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 103


state 83

   45 Expression: Expression LTE . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 104


state 84

   46 Expression: Expression EQLTO . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 105


state 85

   40 Expression: Expression PLUS . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 106


state 86

   41 Expression: Expression MINUS . Expression

    NEW        shift, and go to state 54
    INT        shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    MNAME      shift, and go to state 58
    MINUS      shift, and go to state 59
    NOT        shift, and go to state 60
    LEFTPAREN  shift, and go to state 61
